Fix the spacing of the top navigation menu

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ a {
   border-radius: 4px;
 }
 
-nav a:hover {
+a:hover {
   #4482e5;
 }
 
